test/Fail/Issue2024-fun.agda
-- Andreas, 2016-06-11

postulate Foo : Foo → Set
